--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gamberdev.github.io/abdulazizalgambar-f54af542",
+  "homepage": "https://gamberdev.github.io/abdulaziz-algambar",
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
